--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dependencies": {
       "express": "^4.18.2",
       "body-parser": "^1.20.2",
-      "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js#webpack-exodus",
+      "whatsapp-web.js": "github:pedroslopez/whatsapp-web.js",
       "qrcode-terminal": "^0.12.0"
     }
   }
